<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login_menu"
            android:icon="@drawable/ic_message_grey600_36dp"
            android:title="@string/title_activity_login"/>
        <item
            android:id="@+id/register_menu"
            android:icon="@drawable/ic_message_grey600_36dp"
            android:title="@string/title_activity_register"/>
    </group>

    <item android:title="@string/this_app">
        <menu>
            <item
                android:id="@+id/about_menu"
                android:icon="@drawable/ic_message_grey600_36dp"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/updata_menu"
                android:icon="@drawable/ic_message_grey600_36dp"
                android:title="@string/update"/>
        </menu>
    </item>
</menu>