<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.androider.legacy.activity.SearchActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/search_toolbar"
        android:background="@color/primary_color"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/Theme.AppCompat.Light"
        android:minHeight="?attr/actionBarSize">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="false"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:background="@drawable/ic_search_grey600_36dp"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="@string/key_word"
                    android:id="@+id/search_input"
                    android:background="@color/text_icon"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/search_confirm"
                    android:text="@string/title_activity_search"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/result_list" />
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/result_cover"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/primary_text"
                android:text="@string/empty_search"/>
        </android.support.v7.widget.CardView>

</LinearLayout>
